[package]
name = "stdout"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.4.3"
mpeg2ts = "0.2"
wait-timeout = "0.2.0"
whisper-rs = { git = "https://github.com/tazz4843/whisper-rs.git", branch = "master" }


[profile.release]
opt-level = 'z'     # Optimize for size
lto = true          # Enable link-time optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations
panic = 'abort'     # Abort on panic
strip = true        # Strip symbols from binary*
